--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,6 +1,9 @@
 <div id="main">
-    <app-projects id="projects" [hidden]="!projectsOpen" (projectEmitter)='openProjectDetails($event)'></app-projects>
-    <app-project-details id='project-details' [hidden]='!projectsDetailsOpen'></app-project-details>
+    <app-projects id="projects" [hidden]="!projectsOpen" 
+    (editProjectClick)='openProjectDetails($event)'></app-projects>
+    <app-project-details id='project-details' [hidden]='!projectsDetailsOpen'
+    (closeEmitter)='closeProjectDetails()'
+    (saveEmitter)='afterSaveProject($event)'></app-project-details>
     <app-tasks id='tasks' [hidden]='!tasksOpen'>
         <div>Dawaj moje ciastka</div>
     </app-tasks>
