--- a/src/app/tasks/tasks.component.css
+++ b/src/app/tasks/tasks.component.css
@@ -45,6 +45,10 @@
     margin: 5px;
 }
 
+.task-subtask{
+    width: auto;   
+}
+
 .filter-container{
     margin: 5px;
 }
@@ -61,3 +65,4 @@
     height: 3em;
     border-radius: 8px;
 }
+
