--- a/src/styles.css
+++ b/src/styles.css
@@ -9,9 +9,12 @@ html, body{
 
 .form-group{
     display: block;
-    width: 100%;
-    padding: 10px;
+    /* width: 100%; */
+    /* padding: 10px; */
     box-sizing: border-box;
+    border: 1px solid black;
+    margin:4px;
+    border-radius: 8px;
 }
 
 .form-label{
