--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,10 +1,13 @@
 <div class="projects-container">
     <h3>Projekty</h3>
-    <input id="project-filter" (input)='filterProjects($event.target.value)'>
-    <div id="projects-list">
+    <!-- TODO: ustawić odpowiednio styl do filtra -->
+    <input id="project-filter filter" (input)='filterProjects($event.target.value)'>
+    <!-- TODO: zrobić globalny styl do listy oraz do jej elementów-->
+    <div id="projects-list" class="list">
         <div *ngFor='let project of model.getProjects()'
         [ngClass]="{'selected': isSelectedProject(project),
-                    'project': true}" 
+                    'project': true,
+                    'list-item':true}" 
                     (click)='projectClick(project)'
                     >
             
