--- a/src/app/task-details/task-details.component.html
+++ b/src/app/task-details/task-details.component.html
@@ -2,7 +2,7 @@
     <form class="form">
 
         <mat-expansion-panel class="form-group" [expanded]="true">
-            <mat-expansion-panel-header>
+            <mat-expansion-panel-header class="form-group-header">
                 Nazwa
             </mat-expansion-panel-header>
             <!-- TODO: można dodać opis -->
@@ -10,16 +10,16 @@
             [ngModel]='model.getTask().getName()' (ngModelChange)="model.getTask().setName($event)">
         </mat-expansion-panel>
 
-        <mat-expansion-panel class="form-group" [expanded]="model.getTask().getDescription()">
-            <mat-expansion-panel-header>
+        <mat-expansion-panel class="form-group" [expanded]="model.isDescriptionExtended()">
+            <mat-expansion-panel-header class="form-group-header">
                 Opis
             </mat-expansion-panel-header>
             <textarea class="form-control" id="description" name="description"
             [ngModel]='model.getTask().getDescription()' (ngModelChange)="model.getTask().setDescription($event)"></textarea>
         </mat-expansion-panel>
         
-        <mat-expansion-panel class="form-group" [expanded]="model.getTask().getStatus()!=null">
-            <mat-expansion-panel-header>
+        <mat-expansion-panel class="form-group" [expanded]="model.isStatusExtended()">
+            <mat-expansion-panel-header class="form-group-header">
                 Stan
             </mat-expansion-panel-header>
             <select class="form-control" id="status" name="status"
@@ -31,8 +31,8 @@
             </select>
         </mat-expansion-panel>
 
-        <mat-expansion-panel class="form-group" [expanded]="model.getTask().getEndDate()!=null">
-            <mat-expansion-panel-header>
+        <mat-expansion-panel class="form-group" [expanded]="model.isEndDateExtended()">
+            <mat-expansion-panel-header class="form-group-header">
                 Data końcowa
             </mat-expansion-panel-header>
             <div class="datepicker-container">
@@ -43,16 +43,16 @@
             </div>  
         </mat-expansion-panel>
       
-        <mat-expansion-panel class="form-group" [expanded]="model.getTask().getPlannedTime()!=null">
-            <mat-expansion-panel-header>
+        <mat-expansion-panel class="form-group" [expanded]="model.isPlannedTimeExtended()">
+            <mat-expansion-panel-header class="form-group-header">
                 Planowany czas
             </mat-expansion-panel-header>
             <input type='number' class="form-control" id="planned_time" name="planned_time"
             [ngModel]="model.getTask().getPlannedTime()" (ngModelChange)="model.getTask().setPlannedTime($event)">
         </mat-expansion-panel>
 
-        <mat-expansion-panel class="form-group" [expanded]="model.getTask().getProject()!=null">
-            <mat-expansion-panel-header>
+        <mat-expansion-panel class="form-group" [expanded]="model.isProjectExtended()">
+            <mat-expansion-panel-header class="form-group-header">
                 Projekt
             </mat-expansion-panel-header>
             <!-- TODO: prawdopodobnie przydałoby się, żeby tutaj było dodatkowe ograniczenie, dzięki któremu nie będzie zwijał po wybraniu null -->
@@ -63,8 +63,8 @@
             </select>
         </mat-expansion-panel>
 
-        <mat-expansion-panel class="form-group" [expanded]="model.getTask().getTags().length >0">
-            <mat-expansion-panel-header>
+        <mat-expansion-panel class="form-group" [expanded]="model.isTagsExtended()">
+            <mat-expansion-panel-header class="form-group-header">
                 Etykiety
             </mat-expansion-panel-header>
             <div class="labels-list">
@@ -78,8 +78,8 @@
             <button class="form-control" id="labels" name="labels" [matMenuTriggerFor]="appMenu">Dodaj</button>
         </mat-expansion-panel>
 
-        <mat-expansion-panel class="form-group" [expanded]="model.getTask().getSubtasks().length >0">
-            <mat-expansion-panel-header>
+        <mat-expansion-panel class="form-group" [expanded]="model.isSubtasksExtended()">
+            <mat-expansion-panel-header class="form-group-header">
                 Kroki
             </mat-expansion-panel-header>
             <div class="subtasks-list">
